# rag_intent_gateway

./: .env.example  .gitignore  README.md  examples.py  main.py  main_mcp.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: __init__.py  intent.py
app/core/: config.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  llm_service.py
docs/: API.md  ARCHITECTURE.md  README.md
tests/: __init__.py  test_api.py  test_llm_service.py  test_models.py
